@@ -4,6 +4,10 @@ Changelog
 1.0RC1 (unreleased)
 -------------------
 
+- Always set the effective date of a comment to the same value as the creation
+  date. 
+  [timo]
+
 - Fix SMTP exception when an email is send to the moderator.
   [timo]
 
